clusters/vollminlab-cluster/harbor/harbor/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: harbor-ingress
  namespace: harbor
  labels:
    app: harbor
    env: production
    category: storage
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "900"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "900"
    shlink.vollminlab.com/slug: harbor
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - harbor.vollminlab.com
      secretName: wildcard-tls
  rules:
    - host: harbor.vollminlab.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: harbor
                port:
                  number: 80
